Implement slash commands, refactor services, update readme
- Updated README to note min Java version required - Java 25
- Introduced new slash command classes for admin functionalities, including `PrefixSlashCmd`, `QueuetypeSlashCmd`, and others, enhancing command management.
- Refactored existing commands to utilize the new `MusicService` for improved functionality and consistency.
- Added architectural documentation for better understanding of the system structure.
- Enhanced the `run_jmusicbot.sh` script with JVM options for better compatibility with Java 22+.